# modern-work-flow

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/modern_work_flow/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
