[tool.poetry]
name = "modern-work-flow"
version = "0.1.0"
authors = ["Raymond Lewis <Raymond0256@gmail.com>"]
description = "My modern python work flow."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/raymond0256/modern-work-flow"
repository = "https://github.com/raymond0256/modern-work-flow"
keywords = ["modern", "python", "work-flow"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.poetry.scripts]
modern-work-flow = "modern_work_flow.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_work_flow"]

[tool.covrage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
